plugins {
    id "org.sonarqube" version "4.0.0.2929"
    id 'java-library'
    id 'io.spring.dependency-management' version "1.1.0"
    id "jacoco"
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}

sonarqube {
    properties {
        property "sonar.coverage.jacoco.xmlReportPaths", "${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml"
        property "sonar.dynamicAnalysis", "reuseReports"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.java.coveragePlugin", "jacoco"
        property "sonar.language", "java"
        property "sonar.login", System.getenv("SONAR_TOKEN")
        property "sonar.organization", "navikt"
        property "sonar.project.monorepo.enabled", true
        property "sonar.projectKey", "testnav-servlet-core"
        property "sonar.projectName", "testnav-servlet-core"
        property "sonar.sourceEncoding", "UTF-8"
    }
}

dependencyManagement {
    applyMavenExclusions = false
    imports {
        mavenBom 'org.springframework.boot:spring-boot-dependencies:3.0.4'
    }
}

group = 'no.nav.testnav.libs'

repositories {
    mavenCentral()
    mavenLocal()
}

java.sourceCompatibility = JavaVersion.VERSION_17

dependencies {

    implementation 'io.swagger.core.v3:swagger-annotations-jakarta:2.2.8'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    testImplementation "org.springframework.boot:spring-boot-starter-test"

    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
}